[package]
name = "bt_file_utils"
version = "0.1.0"
edition = "2021"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Basic file read operation. Returns string with file. The file is either a relative location or passes via an environment variable"
keywords = ["filesystem","file","I/O"]
categories = ["filesystem"]
repository = "https://github.com/bachuetech/bt_file_utils"
readme = "README.md"
homepage = "https://github.com/bachuetech/bt_file_utils"
license = "GPL-3.0-only"

[dependencies]
bt_logger = "0.2.1"
