[package]
name = "bt_file_utils"
version = "0.2.0"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Basic file read operation. Returns string with file. The file is either a relative location or passes via an environment variable"
keywords = ["filesystem","file","io","read"]
categories = ["filesystem"]
repository = "https://github.com/bachuetech/bt_file_utils"
readme = "README.md"
homepage = "https://github.com/bachuetech/bt_file_utils"
license = "GPL-3.0-only"

[dependencies]
bt_logger = "0.3.2"
tempfile = "3.24.0"
zip = "7.2.0"
